fix overflow on one

--- a/practicesite4/main.css
+++ b/practicesite4/main.css
@@ -74,3 +74,7 @@ header:first-child {
   .after-float {
     clear: left;
   }
+
+  .textbox {
+    overflow:scroll;
+  }
